Added dependency for MongoDB, removed timestamp from sensor models

--- a/leshan-server-demo/pom.xml
+++ b/leshan-server-demo/pom.xml
@@ -68,6 +68,11 @@ Contributors:
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.12.0</version>
+        </dependency>
 
         <!-- runtime dependencies -->
        <dependency>
@@ -134,6 +139,14 @@ Contributors:
                             <value>${project.version}</value>
                         </replacement>
                     </replacements>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
             </plugin>
         </plugins>
