Integration of Californium 2.3.0-RC1

--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@ Contributors:
         <test.exclusion.pattern>**/Redis*.java</test.exclusion.pattern>
 
         <!-- dependencies version -->
-        <californium.version>2.2.3</californium.version>
+        <californium.version>2.3.0-RC1</californium.version>
         <logback.version>1.2.3</logback.version>
         <slf4j.api.version>1.7.30</slf4j.api.version>
         <jetty.version>9.4.26.v20200117</jetty.version>
@@ -476,6 +476,20 @@ Contributors:
                                     <reportUnchanged>false</reportUnchanged>
                                 </nonPublicPartOfAPI>
                             </checks>
+                            <filter>
+                                <!--
+                                     Californium is exclude from API check as it does not have clear definition of its API 
+                                     and do not really respect Semantic versioning : 
+                                     https://github.com/eclipse/californium/issues/1159
+                                     https://github.com/eclipse/californium/issues/1166
+                                -->
+                                <packages>
+                                    <regex>true</regex>
+                                    <exclude>
+                                        <item>org\.eclipse\.californium\..*</item>
+                                    </exclude>
+                                </packages>
+                            </filter>
                         </revapi.java>
                     </analysisConfiguration>
                 </configuration>
